Adjust and fixed the packages

--- a/phonebook_app/android/app/src/main/AndroidManifest.xml
+++ b/phonebook_app/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.phonebook">
+    package="com.example.phonebook_app">
    <application
-        android:label="phonebook"
+        android:label="phonebook_app"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
