--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for Phonebook",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./api/index.js"
   },
   "repository": {
     "type": "git",
